--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "serverless-update",
-  "version": "1.0.0",
-  "main": "./bot.js",
+  "name": "car.bg_bot_serverless",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bot.js"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.4.5",
-    "puppeteer": "^23.8.0"
+    "next": "15.0.3",
+    "puppeteer": "^23.8.0",
+    "puppeteer-core": "^10.4.0",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
