--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.4.5",
     "next": "15.0.3",
+    "next-auth": "^5.0.0-beta.25",
     "puppeteer": "^23.8.0",
     "puppeteer-core": "^10.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
