--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@prisma/client": "^5.22.0",
     "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.11.0",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "puppeteer": "^23.8.0",
@@ -22,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1"
   }
 }
