--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "@auth/mongodb-adapter": "^3.7.4",
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
     "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.4.5",
+    "json": "^11.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
+    "pg": "^8.13.1",
     "puppeteer": "^23.8.0",
     "puppeteer-core": "^10.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "token": "^0.1.0",
+    "web": "^0.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
