--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "chrome-aws-lambda": "^10.1.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
