--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.11.0",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
+    "next-pwa": "^5.6.0",
     "pg": "^8.13.1",
     "puppeteer": "^23.8.0",
     "puppeteer-core": "^10.4.0",
