--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,6 +15,11 @@
             "sizes": "512x512",
             "src": "icon512_rounded.png",
             "type": "image/png"
+        },
+        {
+            "sizes": "192x192",
+            "src": "icon192_rounded.png",
+            "type": "image/png"
         }
     ],
     "orientation": "any",
@@ -22,5 +27,15 @@
     "dir": "auto",
     "lang": "bg-BG",
     "name": "AutoMation",
-    "short_name": "AutoMation"
+    "short_name": "AutoMation",
+    "id": "/",
+    "screenshots": [
+        {
+            "src": "screenshot1-wide.png",
+            "sizes": "1280x800",
+            "type": "image/png",
+            "purpose": "wide"
+        }
+    ],
+    "description": "AutoMation is a powerful tool for automating tasks across your devices."
 }
